fix overflow style, README update

--- a/Demo90/static/css/style.css
+++ b/Demo90/static/css/style.css
@@ -19,7 +19,7 @@ body {
    color:gray;
    min-height: 100%;
    margin: 0; 
-   /*overflow: hidden;*/
+   overflow: hidden;
 }
 
 .grid{
